correct placemark z-index on hower

--- a/src/components/placemark/placemark.css
+++ b/src/components/placemark/placemark.css
@@ -16,5 +16,4 @@
     padding: 4px;
     border-radius: 3px;
     background-color: gainsboro;
-    z-index: 10;
 }
